# manualagent

./: .gitignore  README.md  yaml.py
cultural_artifact_explorer/: .gitignore  README.md  __init__.py  fix.py  pyproject.toml  requirements.txt  setup.py  test_nlp.py  test_ocr.py
cultural_artifact_explorer/configs/: nlp.yaml  ocr.yaml  ocr_bboxes.yaml  retrieval.yaml  yolo_data.yaml
cultural_artifact_explorer/data/annotations/: .gitkeep
cultural_artifact_explorer/data/ocr/: char_list.txt  val_annotations.csv
cultural_artifact_explorer/data/processed/: .gitkeep
cultural_artifact_explorer/data/raw/: .gitkeep
cultural_artifact_explorer/data/samples/: .gitkeep
cultural_artifact_explorer/models/nlp/: .gitkeep
cultural_artifact_explorer/models/ocr/: .gitkeep
cultural_artifact_explorer/models/retrieval/: .gitkeep
cultural_artifact_explorer/scripts/: csvchec.py  launch_app.sh  prepare_ocr_dataset.py  run_nlp.py  run_ocr.py  run_pipeline.py  run_retrieval.py
cultural_artifact_explorer/scripts/configs/: ocr.yaml
cultural_artifact_explorer/src/: .gitignore  __init__.py  fix_multilabel_ocr_csv.py  nlp_engine.py
cultural_artifact_explorer/src/cultural_artifact_explorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cultural_artifact_explorer/src/interface/: __init__.py  streamlit_app.py
cultural_artifact_explorer/src/nlp/: __init__.py  dataset_ner.py  dataset_translation.py  model_definition_ner.py  model_definition_translation.py  ner.py  ner_extractor.py  summarization.py  summarizer.py  train_ner.py  train_translation.py  translation.py  utils.py
cultural_artifact_explorer/src/ocr/: __init__.py  active_learning.py  charlist.py  convert_coco_to_yolo.py  convert_cvat_to_coco.py  convert_gt_to_yolo.py  dataset.py  detect_and_recognize.py  eval_cer_wer.py  infer.py  model_definition.py  ocr_engine.py  parse_cvat_to_crops.py  pipeline_infer_detect_recog.py  postprocess.py  predict.py  prepare_data.py  preparevalidatecsv.py  show_ocr_predictions.py  train.py  (+4 more)
cultural_artifact_explorer/tests/: __init__.py  test_nlp.py  test_ocr.py  test_pipeline.py  test_retrieval.py
(+57 files in other folders)
